--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "^9.3.3",
+    "next": "^9.4.4",
     "react": "^16.13.0",
-    "react-dom": "^16.13.0"
+    "react-dom": "^16.13.0",
+    "swr": "^0.2.3"
   }
 }
