🐳chore(pkg.json): sass

--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "swr": "^0.2.3"
+  },
+  "devDependencies": {
+    "sass": "^1.26.10"
   }
 }
